--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,9 @@
 {
-  "name": "Shortcuts for Trello",
-  "version": "1.3.0",
+  "name": "KEys for Trello",
+  "version": "0.0.1",
   "manifest_version": 2,
-  "description": "Adds more extensions to Trello",
-  "homepage_url": "https://github.com/bulkan/shortcuts-for-trello",
-  "icons": {
-    "16": "icons/16.png",
-    "48": "icons/48.png",
-    "128": "icons/128.png"
-  },
+  "description": "Supercharge Trello with Keyboard shortcuts",
+  "homepage_url": "https://github.com/AeroCross/keys-for-trello",
   "default_locale": "en",
   "background": {
     "page": "src/bg/background.html",
